syntax = "proto3";
package chat;

import "google/protobuf/timestamp.proto";

service Chat {
  // rpc RegisterAndChat(Register) returns (stream ChatResults) {};
  // rpc Ping(google.protobuf.Empty) returns (google.protobuf.Empty) {};
  // rpc SendMessage(Message) returns (google.protobuf.Empty) {};
  // rpc ChangeStatus(User) returns (google.protobuf.Empty) {};
  // rpc GetActivePeople(google.protobuf.Empty) returns (Users) {};
  rpc CreateUser(UserInput) returns (UserSchema) {};
}

enum Active {
  UNSPECIFIED = 0;
  OFF_LINE = 1;
  ACTIVE = 2;
  NOT_SEEN = 3;
}

message UserInput {
  string name = 2;
  Active active = 3;
}
message UserSchema {
  int64 id = 1;
  string name = 2;
  Active active = 3;
}
// @Schema
message Message {
  int64 id = 1;
  UserSchema sender_id = 2;
  string message_text = 3;
  google.protobuf.Timestamp submit_date = 4;
}

message Users {
  // all the Users
  repeated UserSchema users = 1;
}

message Register {
  //
  UserSchema user = 1;
}

message ChatResults {
  oneof type {
    Message message = 1;
    Users users = 2;
  }
}
